Fix: overflow hidden for snow contaienr and post update

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -121,12 +121,16 @@ body {
 /* End for custom utilities */
 
 /* snow */
+.snow {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 .snowflake {
   opacity: 0;
-  pointer-events: none;
-  z-index: 999;
   animation: fall 12s ease-out infinite, move 4s ease-in-out infinite,
     fade-in 1s ease-in forwards;
+  pointer-events: none;
 }
 
 @keyframes fall {
